2006-07-10  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/pipespawn.c (pipespawnv_passwd): Add prototype.
	* common-src/pipespawn.c (pipespawn, pipespawn): Remove 2 NULL
	   parameters to the pipespawnv_passwd call.
	* common-src/pipespawn.c (pipespawnv_passwd): Remove passwdvar and
	   passwdfd parameters, add passwdvar and local variable.
	   Don't use memcpy to set passwdfd.
	* common-src/pipespawn.h (pipespawnv_passwd): Remove prototype.

2006-07-07  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-util.c (stream_read_sync_callback): Remove bogus
	  call of callback.

2006-07-07  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/util.c (get_conftoken): Remove duplicate conftoken_ungetc.

2006-07-07  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-util.c: Validate and report big packet size.

2006-07-07  Jean-Louis Martineau <martineau@zmanda.com>
	* oldrecover-src/Makefile.am: Typo.

2006-07-07  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/sendsize.c: Typo.

2006-07-06  Jean-Louis Martineau <martineau@zmanda.com>
	Klocwork bug 128, 170, 182, 470, 517
	* changer-src/chg-scsi.c: Validate drivenum, check count_file.
	* client-src/sendsize.c: Validate level.
	* oldrecover-src/amrecover.c: Use tm.
	* recover-src/amrecover.c: Use tm.
	* server-src/infofile.c (delete_txinfofile): Use local variable.

2006-07-06  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/taper.c: Check for cur_filename.
	* tape-src/output-file.c: Use vstrextend.
	* tape-src/tapeio.c: Check for r.

2006-07-06  Jean-Louis Martineau <martineau@zmanda.com>
	Fix splint warning
	* oldrecover-src/extract_list.c (clean_tape_list): Cleanup for splint.
	* recover-src/extract_list.c (clean_tape_list): Cleanup for splint.
	* server-src/amindexd.c: Add a /*@i@*/.
	* server-src/conffile.c: Cast to off_t for conf_init_am64.
	* server-src/driver.c: Cast to unsigned to print pid_t.